--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,17 +9,26 @@
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous" />
+    <style>
+      /* Your custom CSS goes here */
+      body {
+        background-color: #000000; /* Set a background color for the entire body */
+      }
+
+      footer {
+        text-align: center; /* Center-align text in the footer */
+        padding: 10px; /* Add some padding to the footer */
+        background-color: #333; /* Set a background color for the footer */
+        color: white; /* Set text color in the footer to white */
+      }
+    </style>
     <title>Document</title>
   </head>
   <body>
+    
     {% include 'nav.html' %}
-    
-    
     {% block content %}
-    
     {% endblock %}
-
-    <footer></footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
