--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Welcome to PokeWorld!!</h1>
-  
+    <style>
+        /* Your custom CSS for index.html goes here */
+        body {
+            background-image: url('https://cdn.vox-cdn.com/thumbor/bVEb6waLr3EY8FapR1v8e5I6hGE=/0x266:1024x949/1280x854/filters:format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/48942277/N3DS_PokemonSuperMysteryDungeon_MainIllustration_png_jpgcopy.0.0.jpg');
+            background-size: cover; /* Ensure the background image covers the entire body */
+            background-position: center; /* Center the background image */
+            background-repeat: no-repeat; /* Prevent the background image from repeating */
+        }
 
-  
+        .black-box {
+            background-color: black;
+            padding: 20px; /* Adjust the padding as needed */
+            border-radius: 10px; /* Add rounded corners to the box */
+            text-align: center;
+            margin: 50px auto; /* Adjust margin for centering */
+            display: inline-block; /* Make the box take up only the width of the content */
+
+        }
+
+        h1 {
+            color: white; /* Set the font color of the h1 heading to white */
+            margin: 0; /* Remove default margin for the h1 element */
+        }
+    </style>
+
+    <div class="black-box">
+        <h1>Welcome to PokeWorld!!</h1>
+    </div>
 {% endblock %}
+
+
