--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,22 +1,35 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Log in page</h1>
-<div class="container col-4 border mt-5">
-    <h1></h1>Log In Page</h1> 
-    <form method= "POST" action="/signup">
-    {{ form.hidden_tag() }}
-    {{ form.username. label(class='form-label') }}
-    {{ form.username (class='form-control', placeholder= 'Username') }}
-
-  
-    {{ form.password. label(class='form-label') }} 
-    {{ form.password(class='form-control', placeholder= 'Password') }}
-
-    <div class="d-grid gap-2 my-3"></div>
-    {{ form.submit(class='btn btn-primary') }} 
+    <div class="text-center">
+        <h1 class="fw-bold text-uppercase yellow-text">Log in page</h1>
     </div>
-</form>
-</div>
 
+    <div class="container col-3 border rounded mt-5" style="background-color: black; color: white; padding: 20px;">
+        <form method="POST" action="/signup">
+            {{ form.hidden_tag() }}
+
+            <div class="mb-3 text-center">
+                {{ form.username.label(class='form-label fw-bold text-uppercase') }}
+                {{ form.username(class='form-control') }}
+            </div>
+
+            <div class="mb-3 text-center">
+                {{ form.password.label(class='form-label fw-bold text-uppercase') }}
+                {{ form.password(class='form-control') }}
+            </div>
+
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Log In</button>
+            </div>
+        </form>
+    </div>
+
+    <style>
+        /* Your custom CSS for index.html goes here */
+        .yellow-text {
+            color: rgb(255, 255, 0); /* Set the color of the h1 heading to yellow */
+        }
+    </style>
 {% endblock %}
+
