--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">PokeWorld</a>
+    <a class="navbar-brand" href="/">POKEWORLD</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="input">Our Pokemons</a>
+          <a class="nav-link active" aria-current="page" href="input">Pokemons</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -23,7 +23,7 @@
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false">
-            Get started
+            Start Here!
           </a>
           {% if current_user.is_authenticated %}
           <li class="nav-item">
@@ -36,8 +36,6 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/login">Log in</a></li>
             <li><a class="dropdown-item" href="/signup">Sign up</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
         {% endif %}
