--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -16,6 +16,14 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="input">Pokemons</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/manage_collection">Manage Collection</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/attack_users">Attack Users</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -23,31 +31,23 @@
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false">
-            Start Here!
+            {% if current_user.is_authenticated %}
+              Hi, {{ current_user.username }}
+            {% else  %}
+              Start Here!
+            {% endif %}
           </a>
-          {% if current_user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="#">Log out</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Hi, { current_user }</a>
-          </li>
-          {% else  %}
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/login">Log in</a></li>
-            <li><a class="dropdown-item" href="/signup">Sign up</a></li>
+            {% if current_user.is_authenticated %}
+              <li><a class="dropdown-item" href="/logout">Log out</a></li>
+            {% else  %}
+              <li><a class="dropdown-item" href="/login">Log in</a></li>
+              <li><a class="dropdown-item" href="/signup">Sign up</a></li>
+            {% endif %}
           </ul>
         </li>
-        {% endif %}
       </ul>
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search" />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
+
